all functionality except get high low accounts

--- a/03-objects/src/index.html
+++ b/03-objects/src/index.html
@@ -18,11 +18,11 @@
                     <div class="col">
                         <div class="header grid-col-2">
                             <h2 id="account-list-header">Account List</h2>
-                            <div id="sorting">
-                                <a id="ascending"><i class="fas fa-sort-up" title="Sort Up"></i></a>
+                            <!-- <div id="sorting">
+                                <i id="btnAscending"><i class="fas fa-sort-up" title="Sort Up"></i></a>
                                 <hr>
-                                <a id="descending"><i class="fas fa-sort-down" title="Sort Down"></i></a>
-                            </div>
+                                <a id="btnDescending"><i class="fas fa-sort-down" title="Sort Down"></i></a>
+                            </div> -->
                         </div>
                         <div id="accountList" class="container border-5 rounded-10">
                         </div>
