--- a/03-objects/src/index.html
+++ b/03-objects/src/index.html
@@ -4,6 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="apple-touch-icon" sizes="180x180" href="../../icon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="../../icon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="../../icon/favicon-16x16.png">
+        <link rel="manifest" href="../../icon/site.webmanifest">
         <title>Banking Application</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
         <link rel="stylesheet" href="index.css">
