almost complete but runs no errors

--- a/03-objects/src/cityapp.html
+++ b/03-objects/src/cityapp.html
@@ -16,100 +16,11 @@
     <body>
         <section id="citySection">
             <div id="citiesApplication">
-                <div class="container rounded-20 border-5 grid-col-2 cf">
+                <div class="container rounded-20 border-5 grid-col-2 cf red">
                     <div class="col">
                         <h2>Cities</h2>
                         <div id="cityList" class="container border-5 rounded-10">
-                            <div class="city rounded-10">
-                                <h2 class="cityName">Calgary</h2>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Population</h3>
-                                    <p class="cityNumber">1,285,711</p>
-                                </div>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Latitude</h3>
-                                    <p class="cityNumber">51.0447<span>&#176;</span></p>
-                                </div>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Longitude</h3>
-                                    <p class="cityNumber">114.0719<span>&#176;</span></p>
-                                </div>
-                            </div>
-                            <div class="city rounded-10">
-                                <h2 class="cityName">Calgary</h2>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Population</h3>
-                                    <p class="cityNumber">1,285,711</p>
-                                </div>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Latitude</h3>
-                                    <p class="cityNumber">51.0447<span>&#176;</span></p>
-                                </div>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Longitude</h3>
-                                    <p class="cityNumber">114.0719<span>&#176;</span></p>
-                                </div>
-                            </div>
-                            <div class="city rounded-10">
-                                <h2 class="cityName">Calgary</h2>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Population</h3>
-                                    <p class="cityNumber">1,285,711</p>
-                                </div>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Latitude</h3>
-                                    <p class="cityNumber">51.0447<span>&#176;</span></p>
-                                </div>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Longitude</h3>
-                                    <p class="cityNumber">114.0719<span>&#176;</span></p>
-                                </div>
-                            </div>
-                            <div class="city rounded-10">
-                                <h2 class="cityName">Calgary</h2>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Population</h3>
-                                    <p class="cityNumber">1,285,711</p>
-                                </div>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Latitude</h3>
-                                    <p class="cityNumber">51.0447<span>&#176;</span></p>
-                                </div>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Longitude</h3>
-                                    <p class="cityNumber">114.0719<span>&#176;</span></p>
-                                </div>
-                            </div>
-                            <div class="city rounded-10">
-                                <h2 class="cityName">Calgary</h2>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Population</h3>
-                                    <p class="cityNumber">1,285,711</p>
-                                </div>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Latitude</h3>
-                                    <p class="cityNumber">51.0447<span>&#176;</span></p>
-                                </div>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Longitude</h3>
-                                    <p class="cityNumber">114.0719<span>&#176;</span></p>
-                                </div>
-                            </div>
-                            <div class="city rounded-10">
-                                <h2 class="cityName">Calgary</h2>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Population</h3>
-                                    <p class="cityNumber">1,285,711</p>
-                                </div>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Latitude</h3>
-                                    <p class="cityNumber">51.0447<span>&#176;</span></p>
-                                </div>
-                                <div class="cityInfoRow">
-                                    <h3 class="cityInfoLabel">Longitude</h3>
-                                    <p class="cityNumber">114.0719<span>&#176;</span></p>
-                                </div>
-                            </div>
+                            <!-- Cities go here -->
                         </div>
                     </div>
                     <div class="col">
@@ -140,8 +51,8 @@
                             <div class="container">
                                 <div>
                                     <input type="button" id="btnAdd" value="Add" />
-                                    <input type="button" id="btnUpdate" value="Update" />
-                                    <input type="button" id="btnDelete" value="Delete" /></div>
+                                    <input type="button" id="btnPopulation" value="Population" />
+                                    <input type="button" id="btnLoadSeedData" value="Seed Data" /></div>
                                 <div>
                                     <input type="button" id="btnMostNorthern" value="Most Northern" />
                                     <input type="button" id="btnMostSouthern" value="Most Southern" />
