--- a/03-objects/src/city.html
+++ b/03-objects/src/city.html
@@ -14,19 +14,21 @@
 </head>
 
 <body>
+    <button id='btnTemp'>Load</button>
     <section id="citySection">
         <div id="citiesApplication">
             <div class="container rounded-20 border-5 grid-col-2 cf red">
                 <div class="col">
                     <h2>Cities</h2>
                     <div id="cityList" class="container border-5 rounded-10">
-                       
+
                     </div>
                 </div>
                 <div class="col">
                     <h2>City Controls</h2>
                     <div id="controls" class=" rounded-10">
                         <div class="container">
+                            <input type="hidden" name="cityKey" id="cityKey" value="">
                             <div class="control-group">
                                 <label for="txtCityName" class="control">Name:</label>
                                 <input type="text" class="control border-5 rounded-10" name="txtCityName" id="txtCityName" placeholder="Name">
@@ -45,22 +47,18 @@
                             </div>
                         </div>
                         <div class="container">
-                            <div>
-                                <input type="button" id="btnAdd" value="Add" />
-                                <input type="button" id="btnIncrease" value="Increase" />
-                                <input type="button" id="btnDecrease" value="Decrease" />
+                            <div><input type="button" id="btnAdd" value="Add" />
+                                <input type="button" id="btnUpdate" value="Update" />
+                                <input type="button" id="btnPopulation" value="Population" />
                             </div>
                             <div>
                                 <input type="button" id="btnMostNorthern" value="Most Northern" />
-                                <input type="button" id="btnPopulation" value="Population" />
                                 <input type="button" id="btnMostSouthern" value="Most Southern" />
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
         </div>
     </section>
 
