--- a/03-objects/src/index.html
+++ b/03-objects/src/index.html
@@ -10,7 +10,7 @@
         <link rel="manifest" href="../../icon/site.webmanifest">
         <title>Banking Application</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="./scripts/account/index.css">
     </head>
 
     <body>
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </section>
-        <script type="module" src="./scripts/index.js"></script>
+        <script type="module" src="./scripts/account/index.js"></script>
     </body>
 
 </html>
