moved files around

--- a/03-objects/src/index.html
+++ b/03-objects/src/index.html
@@ -1,68 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./fav-icon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./fav-icon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./fav-icon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./fav-icon/site.webmanifest" />
+    <title>Banking Application</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./scripts/account/index.css" />
+  </head>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="apple-touch-icon" sizes="180x180" href="../../icon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="../../icon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="../../icon/favicon-16x16.png">
-        <link rel="manifest" href="../../icon/site.webmanifest">
-        <title>Banking Application</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
-        <link rel="stylesheet" href="./scripts/account/index.css">
-    </head>
-
-    <body>
-        <section>
-            <h1>Banking Application</h1>
-            <div id="banking-app" class="rounded-20">
-                <div class="container rounded-20 border-5 grid-col-2 cf">
-                    <!-- Left column -->
-                    <div class="col">
-                        <div class="header grid-col-2">
-                            <h2 id="account-list-header">Account List</h2>
-                            <!-- <div id="sorting">
+  <body>
+    <section>
+      <h1>Banking Application</h1>
+      <div id="banking-app" class="rounded-20">
+        <div class="container rounded-20 border-5 grid-col-2 cf">
+          <!-- Left column -->
+          <div class="col">
+            <div class="header grid-col-2">
+              <h2 id="account-list-header">Account List</h2>
+              <!-- <div id="sorting">
                                 <i id="btnAscending"><i class="fas fa-sort-up" title="Sort Up"></i></a>
                                 <hr>
                                 <a id="btnDescending"><i class="fas fa-sort-down" title="Sort Down"></i></a>
                             </div> -->
-                        </div>
-                        <div id="accountList" class="container border-5 rounded-10">
-                        </div>
-                    </div>
-                    <!-- right col -->
-                    <div class="col">
-                        <h2>Account Manager</h2>
-                        <div id="account-manager" class="container border-5 rounded-10">
-                            <div class="control-group">
-                                <label for="account-name" class="control">Account Name</label>
-                                <input type="text" name="account-name" id="txtAccountName"
-                                    class="control border-5 rounded-10">
-                            </div>
-                            <div class="control-group">
-                                <label for="account-starting-balance" class="control">Balance</label>
-                                <input type="text" name="account-starting-balance" id="txtStartingBalance"
-                                    class="control border-5 rounded-10">
-                            </div>
-                            <input id="btnCreateAccount" type="button" value="Create">
-                        </div>
-                        <h2>Transactions</h2>
-                        <div id="transactions" class="container border-5 rounded-10">
-                            <div class="control-group">
-                                <label for="account-transaction" class="control">Account Name:
-                                    <span id="spnAccountName"></span></label>
-                                <input type="text" name="account-transaction" id="txtAccountTransaction"
-                                    class="control border-5 rounded-10">
-                            </div>
-                            <input id="btnDeposit" type="button" value="Deposit">
-                            <input id="btnWithdrawal" type="button" value="Withdrawal">
-                        </div>
-                    </div>
-                </div>
             </div>
-        </section>
-        <script type="module" src="./scripts/account/index.js"></script>
-    </body>
-
+            <div id="accountList" class="container border-5 rounded-10"></div>
+          </div>
+          <!-- right col -->
+          <div class="col">
+            <h2>Account Manager</h2>
+            <div id="account-manager" class="container border-5 rounded-10">
+              <div class="control-group">
+                <label for="account-name" class="control">Account Name</label>
+                <input
+                  type="text"
+                  name="account-name"
+                  id="txtAccountName"
+                  class="control border-5 rounded-10"
+                />
+              </div>
+              <div class="control-group">
+                <label for="account-starting-balance" class="control"
+                  >Balance</label
+                >
+                <input
+                  type="text"
+                  name="account-starting-balance"
+                  id="txtStartingBalance"
+                  class="control border-5 rounded-10"
+                />
+              </div>
+              <input id="btnCreateAccount" type="button" value="Create" />
+            </div>
+            <h2>Transactions</h2>
+            <div id="transactions" class="container border-5 rounded-10">
+              <div class="control-group">
+                <label for="account-transaction" class="control"
+                  >Account Name: <span id="spnAccountName"></span
+                ></label>
+                <input
+                  type="text"
+                  name="account-transaction"
+                  id="txtAccountTransaction"
+                  class="control border-5 rounded-10"
+                />
+              </div>
+              <input id="btnDeposit" type="button" value="Deposit" />
+              <input id="btnWithdrawal" type="button" value="Withdrawal" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script type="module" src="./scripts/account/index.js"></script>
+  </body>
 </html>
