--- a/03-objects/src/city.html
+++ b/03-objects/src/city.html
@@ -1,72 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../../icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../../icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../../icon/favicon-16x16.png">
-    <link rel="manifest" type="text/html" href="../../icon/site.webmanifest">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="apple-touch-icon"
+      type="image/png"
+      sizes="180x180"
+      href="./fav-icon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./fav-icon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./fav-icon/favicon-16x16.png"
+    />
+    <link rel="manifest" type="text/html" href="./fav-icon/site.webmanifest" />
     <title>City App</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
-    <link rel="stylesheet" href="./scripts/Cities/index.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./scripts/Cities/index.css" />
+  </head>
 
-<body>
-    <button id='btnTemp'>Load</button>
+  <body>
+    <button id="btnTemp">Load</button>
     <section id="citySection">
-        <div id="citiesApplication">
-            <div class="container rounded-20 border-5 grid-col-2 cf red">
-                <div class="col">
-                    <h2>Cities</h2>
-                    <div id="cityList" class="container border-5 rounded-10">
-
-                    </div>
+      <div id="citiesApplication">
+        <div class="container rounded-20 border-5 grid-col-2 cf red">
+          <div class="col">
+            <h2>Cities</h2>
+            <div id="cityList" class="container border-5 rounded-10"></div>
+          </div>
+          <div class="col">
+            <h2>City Controls</h2>
+            <div id="controls" class="rounded-10">
+              <div class="container">
+                <input type="hidden" name="cityKey" id="cityKey" value="" />
+                <div class="control-group">
+                  <label for="txtCityName" class="control">Name:</label>
+                  <input
+                    type="text"
+                    class="control border-5 rounded-10"
+                    name="txtCityName"
+                    id="txtCityName"
+                    placeholder="Name"
+                  />
                 </div>
-                <div class="col">
-                    <h2>City Controls</h2>
-                    <div id="controls" class=" rounded-10">
-                        <div class="container">
-                            <input type="hidden" name="cityKey" id="cityKey" value="">
-                            <div class="control-group">
-                                <label for="txtCityName" class="control">Name:</label>
-                                <input type="text" class="control border-5 rounded-10" name="txtCityName" id="txtCityName" placeholder="Name">
-                            </div>
-                            <div class="control-group">
-                                <label for="txtPopulation" class="control">Population:</label>
-                                <input type="text" class="control border-5 rounded-10" name="txtPopulation" id="txtPopulation" placeholder="Population">
-                            </div>
-                            <div class="control-group">
-                                <label for="txtLatitude" class="control">Latitude:</label>
-                                <input type="text" class="control border-5 rounded-10" name="txtLatitude" id="txtLatitude" placeholder="Latitude">
-                            </div>
-                            <div class="control-group">
-                                <label for="txtLongitude" class="control">Longitude:</label>
-                                <input type="text" class="control border-5 rounded-10" name="txtLongitude" id="txtLongitude" placeholder="Longitude">
-                            </div>
-                        </div>
-                        <div class="container">
-                            <div>
-                            <input type="button" id="btnNew" value="New" />
-                            <input type="button" id="btnAdd" value="Add" />
-                            <input type="button" id="btnUpdate" value="Update" />
-                            </div>
-                            <div>
-                                <input type="button" id="btnPopulation" value="Population" />
-                                <input type="button" id="btnMostNorthern" value="Most Northern" />
-                                <input type="button" id="btnMostSouthern" value="Most Southern" />
-                            </div>
-                        </div>
-                    </div>
+                <div class="control-group">
+                  <label for="txtPopulation" class="control">Population:</label>
+                  <input
+                    type="text"
+                    class="control border-5 rounded-10"
+                    name="txtPopulation"
+                    id="txtPopulation"
+                    placeholder="Population"
+                  />
                 </div>
+                <div class="control-group">
+                  <label for="txtLatitude" class="control">Latitude:</label>
+                  <input
+                    type="text"
+                    class="control border-5 rounded-10"
+                    name="txtLatitude"
+                    id="txtLatitude"
+                    placeholder="Latitude"
+                  />
+                </div>
+                <div class="control-group">
+                  <label for="txtLongitude" class="control">Longitude:</label>
+                  <input
+                    type="text"
+                    class="control border-5 rounded-10"
+                    name="txtLongitude"
+                    id="txtLongitude"
+                    placeholder="Longitude"
+                  />
+                </div>
+              </div>
+              <div class="container">
+                <div>
+                  <input type="button" id="btnNew" value="New" />
+                  <input type="button" id="btnAdd" value="Add" />
+                  <input type="button" id="btnUpdate" value="Update" />
+                </div>
+                <div>
+                  <input type="button" id="btnPopulation" value="Population" />
+                  <input
+                    type="button"
+                    id="btnMostNorthern"
+                    value="Most Northern"
+                  />
+                  <input
+                    type="button"
+                    id="btnMostSouthern"
+                    value="Most Southern"
+                  />
+                </div>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </section>
-
 
     <script type="module" src="./scripts/Cities/index.js"></script>
     <script type="module" src="./scripts/Cities/functions.js"></script>
-</body>
-
+  </body>
 </html>
