--- a/03-objects/src/index.html
+++ b/03-objects/src/index.html
@@ -3,24 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./fav-icon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./fav-icon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./fav-icon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="./fav-icon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="./fav-icon/favicon-16x16.png" />
     <title>Banking Application</title>
     <link
       rel="stylesheet"
@@ -38,11 +21,6 @@
           <div class="col">
             <div class="header grid-col-2">
               <h2 id="account-list-header">Account List</h2>
-              <!-- <div id="sorting">
-                                <i id="btnAscending"><i class="fas fa-sort-up" title="Sort Up"></i></a>
-                                <hr>
-                                <a id="btnDescending"><i class="fas fa-sort-down" title="Sort Down"></i></a>
-                            </div> -->
             </div>
             <div id="accountList" class="container border-5 rounded-10"></div>
           </div>
@@ -92,6 +70,6 @@
         </div>
       </div>
     </section>
-    <script type="module" src="./scripts/account/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
