--- a/03-objects/src/index.html
+++ b/03-objects/src/index.html
@@ -14,61 +14,26 @@
 
   <body>
     <section>
-      <h1>Banking Application</h1>
-      <div id="banking-app" class="rounded-20">
-        <div class="container rounded-20 border-5 grid-col-2 cf">
-          <!-- Left column -->
-          <div class="col">
-            <div class="header grid-col-2">
-              <h2 id="account-list-header">Account List</h2>
-            </div>
-            <div id="accountList" class="container border-5 rounded-10"></div>
-          </div>
-          <!-- right col -->
-          <div class="col">
-            <h2>Account Manager</h2>
-            <div id="account-manager" class="container border-5 rounded-10">
-              <div class="control-group">
-                <label for="account-name" class="control">Account Name</label>
-                <input
-                  type="text"
-                  name="account-name"
-                  id="txtAccountName"
-                  class="control border-5 rounded-10"
-                />
-              </div>
-              <div class="control-group">
-                <label for="account-starting-balance" class="control"
-                  >Balance</label
-                >
-                <input
-                  type="text"
-                  name="account-starting-balance"
-                  id="txtStartingBalance"
-                  class="control border-5 rounded-10"
-                />
-              </div>
-              <input id="btnCreateAccount" type="button" value="Create" />
-            </div>
-            <h2>Transactions</h2>
-            <div id="transactions" class="container border-5 rounded-10">
-              <div class="control-group">
-                <label for="account-transaction" class="control"
-                  >Account Name: <span id="spnAccountName"></span
-                ></label>
-                <input
-                  type="text"
-                  name="account-transaction"
-                  id="txtAccountTransaction"
-                  class="control border-5 rounded-10"
-                />
-              </div>
-              <input id="btnDeposit" type="button" value="Deposit" />
-              <input id="btnWithdrawal" type="button" value="Withdrawal" />
-            </div>
-          </div>
-        </div>
-      </div>
+      <article>
+        <h2>Account</h2>
+        <a href="./scripts/account/index.html" title="Accounts">
+        <aside>
+          
+        </aside>
+        <div>
+          <img src="./images/banking application screen shot.png" alt="Banking">
+        </div></a>
+      </article>
+      <article>
+        <h2>Cities and Community</h2>   
+        <a href="./scripts/city/index.html" title="Accounts">
+        <aside>
+          
+        </aside>
+        <div>
+          <img src="./images/banking application screen shot.png" alt="Banking">
+        </div></a>
+      </article>
     </section>
     <script type="module" src="./scripts/index.js"></script>
   </body>
