--- a/03-objects/src/scripts/city/index.html
+++ b/03-objects/src/scripts/city/index.html
@@ -19,7 +19,7 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="./fav-icon/favicon-16x16.png"
+      href="./favicon-16x16.png"
     />
     <link rel="manifest" type="text/html" href="./fav-icon/site.webmanifest" />
     <title>City App</title>
@@ -27,7 +27,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="./scripts/Cities/index.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
 
   <body>
