Refactored city community

--- a/03-objects/src/account/index.html
+++ b/03-objects/src/account/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./favicon-16x16.png" />
+    <link rel="icon" type="image/png" href="../favicon-16x16.png" />
     <title>Banking Application</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
     <link rel="stylesheet" href="./css/reset.css">
@@ -17,7 +17,7 @@
       <ul class="nav">
         <li><a href="../../index.html">Home</a></li>
         <li><a href="./index.html">Accounts</a></li>
-        <li><a href="../city/city.html">City</a></li>
+        <li><a href="../city/index.html">City</a></li>
 
       </ul>
 
