--- a/03-objects/src/index.html
+++ b/03-objects/src/index.html
@@ -3,38 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./fav-icon/favicon-16x16.png" />
+    <link rel="icon" type="image/png" href="./favicon-16x16.png" />
     <title>Banking Application</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
     />
-    <link rel="stylesheet" href="./scripts/account/index.css" />
+    <style type="text/css">
+      .thumbnail{
+        width:250px;
+      }
+    </style>
   </head>
 
   <body>
     <section>
       <article>
         <h2>Account</h2>
-        <a href="./scripts/account/index.html" title="Accounts">
+        <a href="./account/index.html" title="Accounts">
         <aside>
           
         </aside>
         <div>
-          <img src="./images/banking application screen shot.png" alt="Banking">
+          <img class="thumbnail" src="./images/banking_application_screen_shot.png" alt="Banking">
         </div></a>
       </article>
       <article>
         <h2>Cities and Community</h2>   
-        <a href="./scripts/city/index.html" title="Accounts">
+        <a href="./city/index.html" title="Accounts">
         <aside>
           
         </aside>
         <div>
-          <img src="./images/banking application screen shot.png" alt="Banking">
+          <img class="thumbnail" src="./images/community_city_interface.png" alt="Banking">
         </div></a>
       </article>
     </section>
-    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
