--- a/02-dom/src/index.html
+++ b/02-dom/src/index.html
@@ -78,7 +78,7 @@
             </div>
 
         </footer>
-        <script type="module" src="./scripts/main.js"></script>
+        <script type="module" src="./scripts/index.js"></script>
     </body>
 
 </html>
